# bpsp

./: .ccls  .gitignore  BPSP_BaoCao.docx  CMakeLists.txt  LICENSE  Makefile  README.md  mem.c
client/: .project  client.c
client/c-client/: README.md  client.c
client/java-client/: .gitignore  README.md  pom.xml
client/java-client/src/main/java/com/: App.java  AppUI.java  GenUI.java  Test.java
client/java-client/src/main/java/com/core/client/: BPSPClient.java  BPSPConnection.java  BpspClient.java  Handler.java  Publisher.java  PublisherClient.java  SocketClient.java  Subscriber.java  SubscriberClient.java
client/java-client/src/main/java/com/core/frame/: Frame.java  FrameFactory.java  FrameFixedHeader.java  VarHeader.java
client/java-client/src/main/java/com/resources/: BPSPException.java  Constants.java  Flag.java  Operation.java
client/java-client/src/main/java/com/ui/: AbstractUI.java  ConnectPanel.java  DevicePanel.java  Generator.java  GeneratorUI.java  HeaderPanel.java  SmartHomeUI.java
client/java-client/src/main/java/com/utils/: SystemUtils.java
client/java-client/src/main/resources/: log4j2.xml
client/src/: module-info.java
client/src/lib/: Constants.java  Frame.java  FrameFixedHeader.java  SocketClient.java
client/src/main/: Client.java
java-client/src/: App.java  Test.java  TestLogging.java
java-client/src/main/client/: BpspClient.java  Client.java  Publisher.java  PublisherClient.java  SocketClient.java  Subscriber.java  SubscriberClient.java
java-client/src/main/frame/: Frame.java  FrameFixedHeader.java
java-client/src/resources/: Constants.java  Operation.java
java-client/src/utils/: SystemUtils.java
lib/: CMakeLists.txt  bpsp.h  broker.c  broker.h  client.c  client.h  datatype.c  datatype.h  frame.c  frame.h  frame_op.c  frame_rw.c  log.c  log.h  mem.c  mem.h  net.c  net.h  status.c  status.h  topic.c  topic.h  util.c  util.h
server/: handle.c  handle.h  server.c
specs/: specification.md
test/: CMakeLists.txt  client_test.c  frame_test.c  test_frame.c  test_topic.c  topic_test.c  util_test.c
tools/: README.md  bpsp.c  client.c
